students/VyrzhemkovskiyDaniil/task_02/src/k8s/05-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: web02-service
  namespace: app02
  labels:
    org.bstu.course: RSIOT
    org.bstu.student.slug: ac-63--v02
    app: web02
spec:
  selector:
    app: web02
  ports:
  - port: 80
    targetPort: 8082
    protocol: TCP
    name: http
  type: ClusterIP
